# XYZDrumPad

./: .gitignore  .gitmodules  CMakeLists.txt
src/: main.cpp
util/: plot_gui.py  vip_drumpad_base.stl  vip_drumpad_soft_top.stl
util/drumpad_serial/: drumpad_serial.ino
